--- a/professional_day1_doctor_feedback_live3.html
+++ b/professional_day1_doctor_feedback_live3.html
@@ -1,6 +1,67 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>...</head>
-<body>...</body>
+<head>
+    <meta charset="UTF-8">
+    <style>
+        body {
+            margin: 0;
+            font-family: sans-serif;
+            background: #1C1B33;
+        }
+        .container {
+            position: relative;
+            width: 377px;
+            height: 816px;
+            margin: 0 auto;
+            background-image: url("https://kqin1.github.io/uv-feedback-pages/doctor_bg4.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        .weather-info {
+            position: absolute;
+            top: 95px;
+            width: 100%;
+            text-align: center;
+            color: white;
+        }
+        .weather-info h1 {
+            font-size: 32px;
+            margin: 0;
+        }
+        .temperature {
+            font-size: 92px;
+            margin: 0;
+        }
+        .details, .uv {
+            font-size: 20px;
+            margin-top: 10px;
+        }
+        .feedback-box {
+            position: absolute;
+            top: 695px;
+            left: 10px;
+            width: 342px;
+            height: 66px;
+            padding: 7px 8px;
+            overflow-y: scroll;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            color: white;
+            font-size: 13px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="weather-info">
+            <h1>Eindhoven</h1>
+            <div class="temperature">15°</div>
+            <div class="details">Clouds</div>
+            <div class="uv">UV Index: 0</div>
+        </div>
+        <div class="feedback-box">
+            A new patient of mine went surfing during break without sunscreen on scalp and came back with brittle, less elastic hair and scalp issues. With summer coming, more people doing outdoor sports are applying sunscreen to thinning areas, wearing caps or using UV-protective shampoo. If your scalp feels dry, reddish, or tight after sun exposure, that’s an early sign worth paying attention to.
+        </div>
+    </div>
+</body>
 </html>
