✅ 修复 doctor 页面空白

--- a/professional_day1_doctor_feedback_live3.html
+++ b/professional_day1_doctor_feedback_live3.html
@@ -7,11 +7,13 @@
             font-family: 'SF Pro Display';
             src: local('SF Pro Display'), local('SFProDisplay-Regular'), sans-serif;
         }
+        
         body {
             margin: 0;
-            font-family: sans-serif;
+            font-family: 'SF Pro Display', sans-serif;
             background: #1C1B33;
         }
+        
         .container {
             position: relative;
             width: 377px;
