✅ 修复 doctor 页面空白

--- a/peer_day1_dutch_feedback_live3.html
+++ b/peer_day1_dutch_feedback_live3.html
@@ -19,7 +19,7 @@
             width: 377px;
             height: 816px;
             margin: 0 auto;
-            background-image: url("Dutch (1).png");
+            background-image: url("https://kqin1.github.io/uv-feedback-pages/Dutch (1).png");
             background-size: cover;
             background-repeat: no-repeat;
         }
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">19°</div>
+            <div class="temperature">14°</div>
             <div class="details">Clouds</div>
             <div class="uv">UV Index: 0</div>
         </div>
