✅ 修复 Dutch 页面空白

--- a/professional_day2_doctor_feedback_live4.html
+++ b/professional_day2_doctor_feedback_live4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <style>
             @font-face {
             font-family: 'SF Pro Display';
@@ -18,8 +18,8 @@
         .container {
             position: relative;
             width: 377px;
-            width: 100%;
             height: 816px;
+            height: 100%;
             margin: 0 auto;
             background-image: url("https://kqin1.github.io/uv-feedback-pages/doctor_bg4.png");
             background-size: cover;
@@ -95,4 +95,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-01 03:29:19 -->
+<!-- Last updated: 2025-06-01 03:45:08 -->
