✅ 修复 Dutch 页面空白

--- a/professional_day2_doctor_feedback_live4.html
+++ b/professional_day2_doctor_feedback_live4.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <style>
             @font-face {
             font-family: 'SF Pro Display';
@@ -19,9 +18,8 @@
             position: relative;
             width: 377px;
             height: 816px;
-            height: 100%;
             margin: 0 auto;
-            background-image: url("https://kqin1.github.io/uv-feedback-pages/doctor_bg4.png?v=2");
+            background-image: url("https://kqin1.github.io/uv-feedback-pages/doctor_bg4.png");
             background-size: cover;
             background-repeat: no-repeat;
         }
@@ -65,10 +63,10 @@
         
         .feedback-box {
             position: absolute;
-            top: 85vh;
+            top: 695px;
             left: 10px;
-            width: 90%;
-            height: auto;
+            width: 342px;
+            height: 66px;
             padding: 7px 8px;
             overflow-y: scroll;
             background: linear-gradient(136deg, rgba(46, 51, 90, 0.26) 0%, rgba(28, 27, 51, 0.26) 100%);
@@ -95,4 +93,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-01 03:57:27 -->
+<!-- Last updated: 2025-06-01 04:00:08 -->
