--- a/peer_day3_asian_feedback_live5.html
+++ b/peer_day3_asian_feedback_live5.html
@@ -19,7 +19,7 @@
             width: 377px;
             height: 816px;
             margin: 0 auto;
-            background-image: url(""https://kqin1.github.io/uv-feedback-pages/Asian3.png");
+            background-image: url("https://kqin1.github.io/uv-feedback-pages/Asian3.png");
             background-size: cover;
             background-repeat: no-repeat;
         }
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">17°</div>
+            <div class="temperature">16°</div>
             <div class="details">Clouds</div>
             <div class="uv">UV Index: 0</div>
         </div>
@@ -95,4 +95,4 @@
     </div>
 </body>
 </html>
-<!-- Last updated: 2025-06-01 22:58:44 -->
+<!-- Last updated: 2025-06-01 23:05:25 -->
