✅ 修复 Doctor 页面空白

--- a/professional_day4_doctor_feedback_live.html
+++ b/professional_day4_doctor_feedback_live.html
@@ -82,9 +82,9 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">17°</div>
-            <div class="details">Clouds</div>
-            <div class="uv">UV Index: 4.4</div>
+            <div class="temperature">9°</div>
+            <div class="details">Clear</div>
+            <div class="uv">UV Index: 0</div>
         </div>
         <div class="feedback-box">
             Hi, I’m Daniel, an consultant in industrial safety. Over the past few years, I’ve visited university and startup labs across Europe to support safe use of high-UV tools. One thing I often notice among younger operators,  is that minor UV symptoms are underestimated, and the long-term risks aren’t taken seriously enough.
@@ -94,4 +94,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-02 15:41:04 -->
+<!-- Last updated: 2025-06-03 01:18:43 -->
