--- a/peer_day4_dutch_feedback_live.html
+++ b/peer_day4_dutch_feedback_live.html
@@ -85,9 +85,9 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">16°</div>
-            <div class="details">Clouds</div>
-            <div class="uv">UV Index: 4.4</div>
+            <div class="temperature">9°</div>
+            <div class="details">Clear</div>
+            <div class="uv">UV Index: 0</div>
         </div>
         <div class="feedback-box">
                 Heyyy TU/e folks! I’m doing a quick check to see if anyone else would be interested in having the BODYGUARD UV LLS set available in our uni workspace. Since I started my campus job working with laser cutters and welding arcs, I’ve noticed that even with safety goggles and gloves on, my exposed skin still gets kind of irritated—like a light sunburn. The UV coming off those machines is honestly stronger than I expected. A volunteer at a repair shop mentioned that long-term exposure can lead to sunburn and even skin cancer, which really stuck with me. The full-body UV set looks like a solid option for protection, especially for easy-to-forget areas like the ears, neck, and scalp. But it’s €295, which is quite a lot for students. If more of us speak up, maybe we can get the uni to support it. Let me know if you’d be up for joining me in pushing for better safety gear for tech students like us!
@@ -96,4 +96,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-02 15:33:05 -->
+<!-- Last updated: 2025-06-03 01:19:16 -->
