✅ 修复 Doctor 页面空白

--- a/professional_day7_doctor_feedback_live.html
+++ b/professional_day7_doctor_feedback_live.html
@@ -19,7 +19,7 @@
             width: 377px;
             height: 816px;
             margin: 0 auto;
-            background-image: url("https://kqin1.github.io/uv-feedback-pages/Doctor3.png");
+            background-image: url("https://kqin1.github.io/uv-feedback-pages/Doctor7.png");
             background-size: cover;
             background-repeat: no-repeat;
         }
@@ -83,8 +83,8 @@
         <div class="weather-info">
             <h1>Eindhoven</h1>
             <div class="temperature">13°</div>
-            <div class="details">Drizzle</div>
-            <div class="uv">UV Index: 0</div>
+            <div class="details">Clouds</div>
+            <div class="uv">UV Index: 0.2</div>
         </div>
         <div class="feedback-box">
             Hi everyone,As part of our health and safety initiative, today’s focus is on Sun Safety—something often overlooked during daily biking and commuting. Inspired by programs like SunWise, we’re encouraging everyone to build simple sun protection habits.
@@ -99,4 +99,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-06 06:13:41 -->
+<!-- Last updated: 2025-06-06 06:38:16 -->
