✅ 修复 Asian 页面空白

--- a/peer_day7_asian_feedback_live.html
+++ b/peer_day7_asian_feedback_live.html
@@ -85,9 +85,9 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">13°</div>
-            <div class="details">Drizzle</div>
-            <div class="uv">UV Index: 0</div>
+            <div class="temperature">14°</div>
+            <div class="details">Clouds</div>
+            <div class="uv">UV Index: 0.7</div>
         </div>
         <div class="feedback-box">
                 Hey guys, yesterday I went to Decathlon in Eindhoven to grab a biking helmet and found out they’re running a summer safety campaign and giving out free UV sunscreen samples! I saw quite a few people taking them, which made me realize that people around me are actually thinking ahead and protecting themselves from UV. I grabbed one too and decided to start using it before biking or commuting. Just wanted to pop in and share this freebie with you. Let’s take care of ourselves together!
@@ -95,4 +95,4 @@
     </div>
 </body>
 </html>
-<!-- Last updated: 2025-06-06 06:20:15 -->
+<!-- Last updated: 2025-06-06 07:54:41 -->
