✅ 修复 Dutch 页面空白

--- a/peer_day7_dutch_feedback_live.html
+++ b/peer_day7_dutch_feedback_live.html
@@ -85,9 +85,9 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">13°</div>
-            <div class="details">Drizzle</div>
-            <div class="uv">UV Index: 0</div>
+            <div class="temperature">14°</div>
+            <div class="details">Clouds</div>
+            <div class="uv">UV Index: 0.7</div>
         </div>
         <div class="feedback-box">
                 I was biking to uni yesterday and saw a flyer that said smoking actually doubles your risk of getting skin cancer. I had no idea it could interfere with how your body repairs sun damage or even trigger genetic changes. Luckily, I quit a while ago, but seeing that made me feel like I should talk to my friends too. When I told my best friend, he said he’d already been thinking about cutting back. So we decided to quit together right then and there. We even went out and bought baseball caps as a little treat—it felt like a win-win. Now we’re both trying to be a bit healthier and more responsible for ourselves.
@@ -96,4 +96,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-06 06:17:49 -->
+<!-- Last updated: 2025-06-06 07:54:54 -->
