--- a/peer_day8_dutch_feedback_live.html
+++ b/peer_day8_dutch_feedback_live.html
@@ -85,12 +85,12 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">15°</div>
+            <div class="temperature">13°</div>
             <div class="details">Clouds</div>
             <div class="uv">UV Index: 0</div>
         </div>
         <div class="feedback-box">
-            Last month, for my mom’s birthday, my whole family went on a cruise trip. Who doesn’t love sunshine, sea views, and chilling in the pool all day? 😎 But one day I felt a stinging pain on my scalp in the shower, and my hair parting looked much pinker than the rest. I asked my sister to check it, and she said it was sunburn. Later, she messaged me some tips—like wearing a wide-brim hat or UV headwrap, avoiding the sun between 10 a.m. and 4 p.m., and staying in the shade or under a UV umbrella (seriously, no shame in using one!). She also recommended vitamin-rich foods like kiwis and nuts to help with skin recovery, and suggested cooling the scalp with a cold towel.
+            Last month, for my mom’s birthday, my whole family went on a cruise trip. Who doesn’t love sunshine, sea views, and chilling in the pool all day? 😎 But one day I felt a stinging pain on my scalp in the shower, and my hair parting looked much pinker than the rest. I asked my sister to check it, and she said it was sunburn. Later, she messaged me some tips—like wearing a wide-brim hat or UV headwrap, avoiding the sun between 10 a.m. and 4 p.m., and staying in the shade or under a UV umbrella (seriously, no shame in using one!). She also recommended vitamin-rich foods like kiwis and nuts to help with skin recovery, and suggested cooling the scalp with a cold towel.<br><br>
             
             Now that I know how to protect my scalp, I’ve shared it with friends from the cruise and thought I’d pass it on to you too. Enjoying the sun is great, but it’s even better when your scalp stays healthy and your hair shiny.
 
@@ -99,4 +99,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-07 01:23:16 -->
+<!-- Last updated: 2025-06-07 02:58:55 -->
