--- a/peer_day8_asian_feedback_live.html
+++ b/peer_day8_asian_feedback_live.html
@@ -86,8 +86,8 @@
         <div class="weather-info">
             <h1>Eindhoven</h1>
             <div class="temperature">13°</div>
-            <div class="details">Clouds</div>
-            <div class="uv">UV Index: 0</div>
+            <div class="details">Drizzle</div>
+            <div class="uv">UV Index: 0.1</div>
         </div>
         <div class="feedback-box">
             Last month, for my mom’s birthday, my whole family went on a cruise trip. Who doesn’t love sunshine, sea views, and chilling in the pool all day? 😎 But one day I felt a stinging pain on my scalp in the shower, and my hair parting looked much pinker than the rest. I asked my sister to check it, and she said it was sunburn. Later, she messaged me some tips—like wearing a wide-brim hat or UV headwrap, avoiding the sun between 10 a.m. and 4 p.m., and staying in the shade or under a UV umbrella (seriously, no shame in using one!). She also recommended vitamin-rich foods like kiwis and nuts to help with skin recovery, and suggested cooling the scalp with a cold towel.
@@ -98,4 +98,4 @@
     </div>
 </body>
 </html>
-<!-- Last updated: 2025-06-07 03:03:46 -->
+<!-- Last updated: 2025-06-07 08:26:03 -->
