--- a/professional_day8_doctor_feedback_live.html
+++ b/professional_day8_doctor_feedback_live.html
@@ -85,9 +85,9 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">13°</div>
-            <div class="details">Clouds</div>
-            <div class="uv">UV Index: 0</div>
+            <div class="temperature">14°</div>
+            <div class="details">Drizzle</div>
+            <div class="uv">UV Index: 0.1</div>
         </div>
         <div class="feedback-box">
             Hey students, according to <em>DutchNews.nl</em>, the Netherlands has one of the highest skin cancer rates in Europe
@@ -111,4 +111,4 @@
 </body>
 </html>
 
-<!-- Last updated: 2025-06-07 02:55:43 -->
+<!-- Last updated: 2025-06-07 08:27:25 -->
