✅ 修复 Dutch 页面空白

--- a/professional_day2_doctor_feedback_live4.html
+++ b/professional_day2_doctor_feedback_live4.html
@@ -82,15 +82,15 @@
     <div class="container">
         <div class="weather-info">
             <h1>Eindhoven</h1>
-            <div class="temperature">16°</div>
-            <div class="details">Clouds</div>
+            <div class="temperature">13°</div>
+            <div class="details">Rain</div>
             <div class="uv">UV Index: 0</div>
         </div>
         <div class="feedback-box">
-            Studies show that UV rays can still damage wet hair on rainy or cloudy days—especially in high-pH water—and students who surf or cycle in such conditions have reported hair loss and scalp flaking (Tatsuda et al., 1987). Some of our active outdoor patients consistently apply and reapply waterproof UV spray and have successfully reduced scalp irritation and hair shedding. Even when protection feels unnecessary, keeping this habit builds long-term defense—your hair acts as a UV shield, and you’ll notice the difference over time!
+            Studies show that UV rays can still damage wet hair on rainy or cloudy days—especially in high-pH water—and students who surf or cycle in such conditions have reported hair loss and scalp flaking (Bocheva, G., 2023). Some of our active outdoor patients consistently apply and reapply waterproof UV spray and have successfully reduced scalp irritation and hair shedding. Even when protection feels unnecessary, keeping this habit builds long-term defense—your hair acts as a UV shield, and you’ll notice the difference over time! 
         </div>
     </div>
 </body>
 </html>
 
-<!-- Last updated: 2025-06-01 04:00:08 -->
+<!-- Last updated: 2025-06-08 03:28:24 -->
